gitops/apps/urlshortener/production/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: urlshortener
spec:
  replicas: 3
  template:
    spec:
      containers:
      - name: app
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
