gitops/apps/urlshortener/production/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: urlshortener
spec:
  rules:
  - host: short.tlawl.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: urlshortener
            port:
              number: 80
